--- a/src/main/resources/com/example/reactivefx2/hello-view.fxml
+++ b/src/main/resources/com/example/reactivefx2/hello-view.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.reactivefx2.HelloController">
@@ -12,5 +14,11 @@
       <Button fx:id="btnAdd" layoutX="212.0" layoutY="53.0" mnemonicParsing="false" onAction="#addBtnClk" prefHeight="25.0" prefWidth="88.0" text="Добавить" />
       <TextArea fx:id="log" layoutX="333.0" layoutY="14.0" prefHeight="375.0" prefWidth="254.0" />
       <Button layoutX="212.0" layoutY="91.0" mnemonicParsing="false" onAction="#add4BtnClk" prefHeight="25.0" prefWidth="88.0" text="Добавить 4" />
+      <GridPane fx:id="grid" layoutX="33.0" layoutY="149.0" prefHeight="230.0" prefWidth="254.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+      </GridPane>
    </children>
 </AnchorPane>
